# synthron

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  render.yaml  requirements.txt  setup.py
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: architecture.md  providers.md  quickstart.md  self_improvement.md  tools.md
docs/site/: index.html
examples/: coding_agent.py  finance_agent.py  multi_agent_team.py  quickstart.py  research_task.py
synthron/: __init__.py  cli.py
synthron/agents/: __init__.py  base_agent.py  coder_agent.py  coordinator_agent.py  critic_agent.py  executor_agent.py  memory_agent.py  planner_agent.py  researcher_agent.py
synthron/api/: __init__.py  main.py  models.py
synthron/api/routes/: agents.py  memory.py  stream.py  tasks.py
synthron/dashboard/: __init__.py  server.py  stream_handler.py
synthron/dashboard/static/: app.jsx  index.html  styles.css
synthron/evals/: __init__.py  benchmark.py  comparisons.py  test_suite.py
synthron/memory/: __init__.py  episodic.py  long_term.py  memory_manager.py  short_term.py  working_memory.py
synthron/orchestrator/: __init__.py  agent_pool.py  event_bus.py  orchestrator.py  session_manager.py  task_queue.py  workflow_engine.py
synthron/providers/: __init__.py  base_provider.py  cerebras_provider.py  deepseek_provider.py  gemini_provider.py  github_provider.py  groq_provider.py  ollama_provider.py  openrouter_provider.py  smart_router.py
synthron/self_improvement/: __init__.py  failure_analyzer.py  pattern_learner.py  performance_tracker.py  prompt_optimizer.py  retry_strategist.py
synthron/tools/: __init__.py  api_caller.py  base_tool.py  browser_tool.py  calculator.py  code_executor.py  data_analyzer.py  email_tool.py  file_tool.py  image_tool.py  terminal_tool.py  web_search.py
synthron/utils/: __init__.py  config.py  exceptions.py  logger.py  rate_limiter.py  token_counter.py
tests/: __init__.py  test_agents.py  test_memory.py  test_orchestrator.py  test_providers.py  test_self_improvement.py  test_tools.py
