[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "synthron"
version = "0.1.0"
description = "The Neural Fabric for Autonomous AI Agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Synthron Contributors" }]
keywords = ["ai", "agents", "llm", "orchestration", "multi-agent", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiohttp>=3.9.5",
    "httpx>=0.27.0",
    "google-generativeai>=0.7.0",
    "groq>=0.9.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "chromadb>=0.5.0",
    "duckduckgo-search>=6.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "redis>=5.0.4",
    "click>=8.1.7",
    "typer>=0.12.3",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "psutil>=5.9.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "httpx>=0.27.0",
]
browser = ["playwright>=1.44.0"]
pinecone = ["pinecone-client>=4.1.0"]
wandb = ["wandb>=0.17.0"]

[project.scripts]
synthron = "synthron.cli:app"

[project.urls]
Homepage = "https://github.com/YOUR_NAME/synthron"
Repository = "https://github.com/YOUR_NAME/synthron"
Documentation = "https://synthron.dev/docs"
Issues = "https://github.com/YOUR_NAME/synthron/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["synthron*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=synthron --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
